--- a/package.json
+++ b/package.json
@@ -1,52 +1,64 @@
 {
   "name": "@gaddario98/react-ui",
-  "version": "1.0.2",
-  "main": "dist/index.mjs",
-  "module": "dist/index.mjs",
+  "version": "1.0.5",
   "type": "module",
+  "main": "dist/index.js",
+  "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
   "license": "MIT",
   "scripts": {
-    "build": "rollup -c"
+    "build": "rollup -c",
+    "prepublishOnly": "yarn build"
   },
   "devDependencies": {
+    "@headlessui/react": "^2.2.4",
     "@rollup/plugin-commonjs": "^28.0.3",
+    "@rollup/plugin-json": "^6.1.0",
     "@rollup/plugin-node-resolve": "^16.0.1",
     "@rollup/plugin-typescript": "^12.1.2",
+    "@tanstack/react-table": "^8.21.3",
     "@types/rollup-plugin-peer-deps-external": "^2",
+    "clsx": "^2.1.1",
+    "dompurify": "^3.2.6",
+    "framer-motion": "^12.23.6",
+    "i18next": "^25.6.0",
+    "lucide-react": "^0.525.0",
+    "marked": "^16.1.1",
+    "next-intl": "^4.3.4",
+    "react-i18next": "^16.0.1",
     "rollup": "^4.40.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
+    "tailwindcss": "^4.1.14",
     "typescript": "^5.8.3"
   },
+  "dependencies": {
+    "@tanstack/react-table": "^8.21.3"
+  },
   "peerDependencies": {
-    "@headlessui/react": "*",
-    "@tanstack/react-table": "*",
-    "@types/react": "19.2.0",
-    "@types/react-dom": "19.2.0",
-    "clsx": "*",
-    "dompurify": "*",
-    "framer-motion": "*",
-    "i18next": "*",
-    "lucide-react": "*",
-    "marked": "*",
-    "next-intl": "*",
-    "react": "19.2.0",
-    "react-i18next": "*",
-    "tailwindcss": "*",
-    "typescript": "5.8.3"
+    "react": ">=18.0.0 <20.0.0",
+    "react-dom": ">=18.0.0 <20.0.0"
+  },
+  "peerDependenciesMeta": {
+    "react-dom": {
+      "optional": false
+    }
   },
   "files": [
-    "dist"
+    "dist",
+    "lib",
+    "index.ts"
   ],
   "exports": {
     ".": {
+      "types": "./dist/index.d.ts",
       "import": "./dist/index.mjs",
-      "types": "./dist/index.d.ts"
+      "require": "./dist/index.js",
+      "default": "./dist/index.js"
     }
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/gaddario98/react-ui"
+    "url": "git+https://github.com/gaddario98/react-ui"
   },
   "keywords": [
     "react",
